--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "buildCss": "postcss src/style.css -o dist/style.css -w",
     "buildJs": "cp src/script.js dist/js && ./node_modules/.bin/babel src/script.js --watch --out-file dist/js/script-compiled.js --presets=env",
     "11ty": "eleventy --input=./src/index.liquid --output=./dist",
-    "serve": "eleventy --input=./src/index.liquid --output=./dist --serve",
+    "start": "eleventy --input=./src/index.liquid --output=./dist --serve",
     "deploy": "node deploy"
   },
   "browserslist": [
