--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,31 +18,34 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it  
-    - name: Checkout code
-      uses: actions/checkout@v2
+    # - name: Checkout code
+    #   uses: actions/checkout@v2
 
-    - name: Use Node.js 12
-      uses: actions/setup-node@v1
-      with:
-        node-version: '12.x'
+    # - name: Use Node.js 12
+    #   uses: actions/setup-node@v1
+    #   with:
+    #     node-version: '12.x'
 
-    - name: Build the site
-      run: npm i
-    - run: npm run buildCss:ci
-    - run: npm run buildJs:ci
-    - run: npm run 11ty
+    # - name: Build the site
+    #   run: npm i
+    # - run: npm run buildCss:ci
+    # - run: npm run buildJs:ci
+    # - run: npm run 11ty
 
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: fbedussi/mysite
-        tag_with_ref: true
-        tag_with_sha: true
+    # - name: Build and push Docker images
+    #   uses: docker/build-push-action@v1
+    #   with:
+    #     username: ${{ secrets.DOCKER_USERNAME }}
+    #     password: ${{ secrets.DOCKER_PASSWORD }}
+    #     repository: fbedussi/mysite
+    #     tag_with_ref: true
+    #     tag_with_sha: true
     
     - name: Configure SSH
       run: |
+        echo "$SSH_KEY"
+        echo "$SSH_USER"
+        echo "$SSH_HOST"
         mkdir -p ~/.ssh/
         echo "$SSH_KEY" > ~/.ssh/production.key
         chmod 600 ~/.ssh/production.key
