--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,23 +41,22 @@ jobs:
     #     tag_with_ref: true
     #     tag_with_sha: true
     
-    - name: Configure SSH
-      run: |
-        mkdir -p ~/.ssh/
-        echo "$SSH_KEY" > ~/.ssh/production.key
-        chmod 600 ~/.ssh/production.key
-        cat >>~/.ssh/config <<END
-        Host production
-          HostName $SSH_HOST
-          User $SSH_USER
-          IdentityFile ~/.ssh/production.key
-          StrictHostKeyChecking no
-        END
-        cat ~/.ssh/config
-      env:
-        SSH_USER: ${{ secrets.SSH_USER }}
-        SSH_KEY: ${{ secrets.SSH_KEY }}
-        SSH_HOST: ${{ secrets.SSH_HOST }}
+      - name: Configure SSH
+        run: |
+          mkdir -p ~/.ssh/
+          echo "$SSH_KEY" > ~/.ssh/production.key
+          chmod 600 ~/.ssh/production.key
+          cat >>~/.ssh/config <<END
+          Host production
+            HostName $SSH_HOST
+            User $SSH_USER
+            IdentityFile ~/.ssh/production.key
+            StrictHostKeyChecking no
+          END
+        env:
+          SSH_USER: ${{ secrets.SSH_USER }}
+          SSH_KEY: ${{ secrets.SSH_KEY }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
 
-    - name: Update the server container
-      run: ssh production 'docker stop mysite && docker rm mysite && docker pull fbedussi/mysite:docker && docker run --name mysite -p 8081:80 -d fbedussi/mysite:docker'
+      - name: Update the server container
+        run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'docker stop mysite && docker rm mysite && docker pull fbedussi/mysite:docker && docker run --name mysite -p 8081:80 -d fbedussi/mysite:docker'
