--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,4 +44,4 @@ jobs:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USER }}
         password: ${{ secrets.SSH_PASSWORD }}
-        script: /snap/bin/docker stop mysite && /snap/bin/docker rm mysite && /snap/bin/docker pull fbedussi/mysite:docker && /snap/bin/docker run --name mysite -p 8081:80 -d fbedussi/mysite:docker
+        script: /snap/bin/docker rm -f mysite && /snap/bin/docker pull fbedussi/mysite:docker && /snap/bin/docker run --name mysite -l "traefik.http.routers.mysite.rule=Host(\`francescobedussi.it\`) || Host(\`www.francescobedussi.it\`)" --network=webgateway -d fbedussi/mysite:docker
